fix card alignment

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,4 +1,5 @@
 .menu {
+  background-color: #fff;
   background-image: url(../images/background_menu.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -33,7 +34,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   list-style: none;
   margin: 0 auto;
   padding-left: 0;
